# meeting-scribe

./: .gitignore  README.md  config.example.json  pyproject.toml
app/: Package.swift
app/Sources/MeetingScribe/: AppState.swift  DaemonAPI.swift  MainWindow.swift  MeetingScribeApp.swift  MenuBarContent.swift  SettingsView.swift
docs/: desktop-app-spec.md
helper/: syscap.swift
meeting_scribe/: __init__.py  audio.py  cli.py  client.py  config.py  llm.py  process.py  recorder.py  transcribe.py
meeting_scribe/daemon/: __init__.py  db.py  events.py  jobs.py  launchd.py  server.py  state.py
meeting_scribe/integrations/: __init__.py  google_auth.py
meeting_scribe/outputs/: __init__.py  base.py  gdocs.py  gdrive.py  markdown.py  notion.py
scripts/: build_app.sh  build_helper.sh
