[project]
name = "meeting-scribe"
version = "0.1.0"
description = "Record a meeting's system audio + mic, transcribe locally with whisper, and turn it into labelled notes + action items in Notion / markdown."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "requests>=2.31",
]

[project.optional-dependencies]
daemon = ["fastapi>=0.110", "uvicorn>=0.29"]
google = ["google-auth>=2.29", "google-auth-oauthlib>=1.2"]

[project.scripts]
scribe = "meeting_scribe.cli:main"
scribed = "meeting_scribe.daemon.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["meeting_scribe", "meeting_scribe.outputs", "meeting_scribe.daemon", "meeting_scribe.integrations"]
